# evrz-hackathon

./: .gitignore  README.md  docker-compose.yaml
combined/: Dockerfile  pyproject.toml
combined/src/: chunk_data.py
combined/src/bot/: bot.py  storage.py  utils.py
combined/src/review/: api.py  gemma_api.py  prompt.py  rag.py  review.py  utils.py
combined/src/review/parsers/: csharp_parser.py  language.py  make_chunks.py  parser.py  project_parser.py
combined/src/review/styleguide/: csharp_styleguide.py  ts_styleguide.py
data/ts/abctasks-client-main/playwright.config.ts/: __base__  __base__.json
data/ts/abctasks-client-main/vite.config.ts/: __base__  __base__.json
data/ts/market-main/manifest.config.ts/: __base__  __base__.json
data/ts/market-main/vite.config.ts/: __base__  __base__.json
data/ts/webapp-main/vite.config.ts/: __base__  __base__.json
parsers/: language.py  make_chunks.py  parser.py  py_parser.py  pyproject.toml  ts_parser.py
parsers/src/: make_chunks.py  parser.py  project_parser.py
parsers/tests/resources/py/: test1.py
parsers/tests/resources/ts/: test1.ts  test1_result
review_backend/: chunk_data.py  extract_review_examples.py  filter_missing_reviews.py
review_backend/src/: api.py  gemma_api.py  prompt.py  review.py  utils.py
review_backend/src/parsers/: make_chunks.py  parser.py  py_parser.py  ts_parser.py
review_backend/src/styleguide/: csharp_styleguide.py  py_styleguide.py
styleguide/: ts_styleguide.py
styleguide/ts_examples/: review.ts
styleguide/ts_examples/components/: code1.tsx  code10.css  code11.tsx  code12.tsx  code13.tsx  code3.tsx  code4.tsx  code5.tsx  code6.tsx  code7.tsx  code8.tsx  code9.tsx  review.ts
styleguide/ts_examples/functions/: code1.tsx  code10.tsx  code2.tsx  code4.tsx  code5.tsx  code8.tsx  code9.tsx  review.ts
styleguide/ts_examples/naming/: code10.ts  code2.tsx  code3.tsx  code4.tsx  code8.tsx  review.ts  review1.ts
styleguide/ts_examples/naming/_/: code1.ts
styleguide/ts_examples/structure/: code1.tsx  code10.module.css.d.ts  code11.tsx  code12.ts  code14.tsx  code15.tsx  code16.tsx  code18.tsx  code19.tsx  code2.ts  code20.tsx  code21.tsx  code22.tsx  code24.tsx  code25.tsx  code26.tsx  code27.tsx  code28.tsx  code29.tsx  code3.tsx  code30.tsx  code31.tsx  code32.tsx  code34.tsx  code39.tsx  code4.tsx  code43.tsx  code44.tsx  code45.tsx  code46.tsx  code47.tsx  code6.ts  code7.ts  code8.ts  code9.tsx  review.ts
telegram-review-bot/: .gitignore  pyproject.toml
telegram-review-bot/src/: bot.py  storage.py  utils.py
(+5208 files in other folders)
