[tool.poetry]
name = "code-review-bot"
version = "0.1.0"
description = "A Telegram bot for automated code review"
authors = ["isofinly <isofinly.business@icloud.com>"]
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
pyTelegramBotAPI = "^4.14.0"
patool = "^1.12.0"
py7zr = "^0.22.0"
python-dotenv = "^1.0.0"
rarfile = "^4.0"
tqdm = "^4.66.1"
minio = "^7.2.0"
reportlab = "^4.0.8"
pygments = "^2.17.2"
fonttools = "^4.47.0"
requests = "^2.31.0"
openai = "*"
tree-sitter = "*"
tree-sitter-python = "*"
tree-sitter-c-sharp = "*"
tree-sitter-typescript = "*"
jina = "*"
chromadb = "*"
transformers = "4.46.3"
numpy = "*"
# torch = [
#     { platform = "darwin", version = "^2.1.2", source = "PyPI" },
#     { platform = "linux", version = "^2.1.2+cpu", source = "torch-cpu" },
# ]
optimum = "*"
onnx = "*"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[[tool.poetry.source]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "supplemental"

[tool.poetry.scripts]
telegram_review_bot = "src.bot.bot:run_bot"
review = "src.review.review:review2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
