[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "parsers"
version = "0.1.0"
description = "Parser utilities for processing various data formats"
requires-python = ">=3.8"
authors = [
    { name = "dimativator" }
]
dependencies = [
    "pyyaml>=6.0",
    "python-dateutil>=2.8.2",
    "tree_sitter>=0.20.7",
    "tree_sitter_python>=0.20.7",
    "tree_sitter_c_sharp>=0.20.7",
    "tree_sitter_typescript>=0.20.7"
]

[tool.hatch.build.targets.wheel]
packages = ["parsers/src"]
